--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -15,13 +15,18 @@ jobs:
               os: ubuntu-latest,
             }
           - {
+              target: aarch64-unknown-linux-gnu,
+              binary_name: linux-aarch64,
+              os: ubuntu-latest,
+            }
+          - {
               target: x86_64-apple-darwin,
               binary_name: darwin-amd64,
               os: macos-latest,
             }
           - {
               target: aarch64-apple-darwin,
-              binary_name: darwin-arm64,
+              binary_name: darwin-aarch64,
               os: macos-latest,
             }
     runs-on: ${{ matrix.job.os }}
@@ -107,9 +112,9 @@ jobs:
       - name: Download macOS arm64 binary
         uses: actions/download-artifact@v4
         with:
-          name: litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_darwin-arm64
+          name: litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_darwin-aarch64
       - name: Create universal macOS binary
-        run: lipo -create -output litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_darwin-universal litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_darwin-amd64 litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_darwin-arm64
+        run: lipo -create -output litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_darwin-universal litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_darwin-amd64 litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_darwin-aarch64
       - name: Write Apple signing key to a file (macOS only)
         env:
           APPLE_SIGNING_KEY_P12: ${{ secrets.APPLE_SIGNING_KEY_P12 }}
@@ -185,10 +190,13 @@ jobs:
           name: litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_linux-amd64
       - uses: actions/download-artifact@v4
         with:
+          name: litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_linux-aarch64
+      - uses: actions/download-artifact@v4
+        with:
           name: litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_darwin-amd64
       - uses: actions/download-artifact@v4
         with:
-          name: litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_darwin-arm64
+          name: litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_darwin-aarch64
       - uses: actions/download-artifact@v4
         with:
           name: litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_darwin-universal
@@ -197,8 +205,9 @@ jobs:
         with:
           files: |
             litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_darwin-amd64
-            litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_darwin-arm64
+            litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_darwin-aarch64
             litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_linux-amd64
+            litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_linux-aaarch64
             litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_darwin-universal
   publish_on_homebrew:
     name: Publish release on Homebrew
