--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -17,7 +17,7 @@ jobs:
           - {
               target: aarch64-unknown-linux-gnu,
               binary_name: linux-aarch64,
-              os: ubuntu-latest,
+              os: self-hosted,
             }
           - {
               target: x86_64-apple-darwin,
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install libudev-dev
         run: sudo apt-get update && sudo apt-get install libudev-dev
-        if: matrix.job.os == 'ubuntu-latest'
+        if: matrix.job.os == 'ubuntu-latest' || matrix.job.os == 'self-hosted'
       - name: Cache Rust dependencies
         uses: actions/cache@v4.1.1
         with:
