--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -11,13 +11,6 @@ jobs:
       - name: Install libudev-dev
         run: sudo apt-get update && sudo apt-get install libudev-dev
 
-      - name: Install latest Rust nightly
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly
-          override: true
-          components: rustc, rustfmt, clippy
-
       - name: Check out repository
         uses: actions/checkout@v4
         with:
@@ -25,6 +18,13 @@ jobs:
 
       - name: Set up Python
         uses: actions/setup-python@v5
+
+      - name: Use Rust 1.83.0
+        run: rustup override set 1.83.0
+
+      - run: rustup component add clippy rustfmt
+
+      - uses: Swatinem/rust-cache@v2
 
       - name: Detect code style issues
         uses: pre-commit/action@v3.0.1
