--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,9 @@ path = "src/main.rs"
 
 [dependencies]
 clap = { version = "4.5.32", features = ["derive"] }
+env_logger = "0.11.5"
 litra = "2.2.0"
+log = "0.4.22"
 tokio = { version = "1.44.1", features = ["full"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
