--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ path = "src/main.rs"
 [dependencies]
 clap = { version = "4.5.32", features = ["derive"] }
 env_logger = "0.11.5"
-litra = "2.4.0"
+litra = { version = "2.4.0", features = [] }
 log = "0.4.22"
 tokio = { version = "1.44.1", features = ["full"] }
 
