--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,12 @@ clap = { version = "4.5.53", features = ["derive"] }
 env_logger = "0.11.5"
 litra = "2.4.0"
 log = "0.4.29"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.9"
 tokio = { version = "1.48.0", features = ["full"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 inotify = { version = "0.11.0" }
+
+[dev-dependencies]
+tempfile = "3.13"
