--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ path = "src/main.rs"
 [dependencies]
 clap = { version = "4.5.54", features = ["derive"] }
 env_logger = "0.11.5"
-litra = "2.5.1"
+litra = { version = "2.5.2", default-features = false }
 log = "0.4.29"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
