--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -41,6 +41,11 @@ jobs:
               binary_name: windows-amd64.exe,
               runs_on: windows-latest,
             }
+          - {
+              target: aarch64-pc-windows-msvc,
+              binary_name: windows-arm64.exe,
+              runs_on: windows-11-arm,
+            }
     runs-on: ${{ matrix.job.runs_on }}
     steps:
       - name: Install rustup (self-hosted runners only)
@@ -202,6 +207,9 @@ jobs:
       - uses: actions/download-artifact@v7
         with:
           name: litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_windows-amd64.exe
+      - uses: actions/download-artifact@v7
+        with:
+          name: litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_windows-arm64.exe
       - name: Create release
         uses: softprops/action-gh-release@v2
         with:
@@ -212,6 +220,7 @@ jobs:
             litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_linux-aarch64
             litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_darwin-universal
             litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_windows-amd64.exe
+            litra-autotoggle_${{ steps.sanitise_ref.outputs.value }}_windows-arm64.exe
   cargo_publish:
     name: Publish with Cargo to Crates.io
     runs-on: ubuntu-latest
